# 202603-muyan-data-processing

./: .gitignore  README.md  launcher - 副本.bat  launcher.bat  main.py  pyproject.toml  test_out2.txt  ~$工料机汇总.xlsx  初稿-两中心询价材料表.xlsx  匹配结果 - 副本.xlsx  工料机汇总-安装.xlsx  工料机汇总.xlsx  测试输出.xlsx
.kiro/specs/excel-price-matcher/: design.md  requirements.md  tasks.md
app/material_matcher/: __init__.py  config.py
app/material_matcher/aggregator/: price_aggregator.py
app/material_matcher/exporter/: excel_exporter.py
app/material_matcher/matcher/: __init__.py  pipeline.py
app/material_matcher/models/: material.py
app/material_matcher/parser/: base.py  inquiry_parser.py  source_parser.py
app/material_matcher/utils/: logging.py
app/material_matcher_test/: __init__.py  cli.py
launcher/: launcher.bat  test_help_output.txt  test_output.txt  update.bat
launcher/docs/: user_guide.md
launcher/python-downloader/: go.mod  main.go
launcher/scripts/: build_package.bat  create_first_run_package.bat
launcher/templates/: mirror_sources.txt  python312._pth
launcher/tests/: cleanup.bat  run_all_tests.bat  test_args.bat  test_launch.bat  test_logging.bat  test_paths.bat  test_python.bat  test_update.bat
material_matcher/: __main__.py  cli.py
material_matcher/aggregator/: __init__.py
material_matcher/exporter/: __init__.py
material_matcher/matcher/: exact_matcher.py  llm_matcher.py  traditional_matcher.py
material_matcher/models/: __init__.py
material_matcher/parser/: __init__.py
material_matcher/utils/: __init__.py
(+2 files in other folders)
